# AudioPlayer

./: .gitignore  CMakeLists.txt
src/: Channel.h  Playback.cpp  Playback.h  Player.cpp  Player.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
